@@ -16,7 +16,7 @@ First order Sobol indice of Y|X1 = 0.293133
 Total order Sobol indice of Y|X3 = 0.256687
 Second order Sobol indice of Y|X1,X3 = 0.240492
 Confidence interval of first order Y|X1 = [0.268014, 0.319384]
-Confidence interval of total order Y|X3 = [0.221053, 0.288446]
+Confidence interval of total order Y|X3 = [0.241828, 0.274884]
 Method = MartinezSensitivityAlgorithm
 First order Sobol indice of Y|X1 = 0.308902
 Total order Sobol indice of Y|X3 = 0.244293
@@ -46,7 +46,7 @@ First order Sobol indice of Y|X1 = 0.306722
 Total order Sobol indice of Y|X3 = 0.246015
 Second order Sobol indice of Y|X1,X3 = 0.258141
 Confidence interval of first order Y|X1 = [0.281777, 0.332794]
-Confidence interval of total order Y|X3 = [0.207964, 0.276889]
+Confidence interval of total order Y|X3 = [0.228285, 0.263565]
 Method = MartinezSensitivityAlgorithm
 First order Sobol indice of Y|X1 = 0.301029
 Total order Sobol indice of Y|X3 = 0.249543
@@ -76,7 +76,7 @@ First order Sobol indice of Y|X1 = 0.313356
 Total order Sobol indice of Y|X3 = 0.243082
 Second order Sobol indice of Y|X1,X3 = 0.242286
 Confidence interval of first order Y|X1 = [0.289126, 0.341806]
-Confidence interval of total order Y|X3 = [0.211102, 0.275492]
+Confidence interval of total order Y|X3 = [0.22314, 0.257817]
 Method = MartinezSensitivityAlgorithm
 First order Sobol indice of Y|X1 = 0.314037
 Total order Sobol indice of Y|X3 = 0.243514
