@@ -150,9 +150,9 @@ bootstrap intervals
 First order indices interval =  [0.29791, 0.348465]
 [0.427771, 0.475422]
 [-0.0138834, 0.0264492]
-Total order indices interval =  [0.483284, 0.564178]
-[0.406241, 0.493947]
-[0.212109, 0.270855]
+Total order indices interval =  [0.496706, 0.555506]
+[0.430673, 0.467616]
+[0.221274, 0.258088]
 asymptotic intervals:
 First order indices distribution =  Normal(mu = [0.327841,0.451653,0.00614445], sigma = [0.0115862,0.0114521,0.00918704], R = [[ 1 0 0 ]
  [ 0 1 0 ]
@@ -174,9 +174,9 @@ bootstrap intervals
 First order indices interval =  [0.294811, 0.346137]
 [0.418592, 0.467875]
 [-0.0267497, 0.0140183]
-Total order indices interval =  [0.517024, 0.595141]
-[0.385042, 0.483328]
-[0.216253, 0.274607]
+Total order indices interval =  [0.526414, 0.585981]
+[0.409144, 0.452132]
+[0.227014, 0.260317]
 asymptotic intervals:
 First order indices distribution =  Normal(mu = [0.320914,0.442525,-0.00666647], sigma = [0.0113353,0.011422,0.00932138], R = [[ 1 0 0 ]
  [ 0 1 0 ]
@@ -198,9 +198,9 @@ bootstrap intervals
 First order indices interval =  [0.285985, 0.338633]
 [0.418139, 0.46523]
 [-0.0179832, 0.0203392]
-Total order indices interval =  [0.516694, 0.588112]
-[0.390002, 0.486338]
-[0.21149, 0.270975]
+Total order indices interval =  [0.524092, 0.583747]
+[0.422644, 0.460395]
+[0.22664, 0.259175]
 asymptotic intervals:
 First order indices distribution =  Normal(mu = [0.313356,0.443224,0.000547903], sigma = [0.0112406,0.0113087,0.00915235], R = [[ 1 0 0 ]
  [ 0 1 0 ]
@@ -328,9 +328,9 @@ bootstrap intervals
 Aggregated first order indices interval =  [0.467429, 0.510621]
 [0.272704, 0.302927]
 [0.208284, 0.233521]
-Aggregated total order indices interval =  [0.464566, 0.519757]
-[0.264495, 0.319478]
-[0.196897, 0.252686]
+Aggregated total order indices interval =  [0.475863, 0.504546]
+[0.278582, 0.302992]
+[0.210149, 0.233975]
 asymptotic intervals:
 Aggregated first order indices interval =  [0.469715, 0.509019]
 [0.273925, 0.299857]
